# nsai-ticket-to-ride

./: .gitignore  README.md  pyproject.toml
artifacts/: metrics.csv  sample_trace.txt  summary.json
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_endgame.py  test_engine.py  test_rules.py  test_scoring.py  utils.py
ttr_nsai/: __init__.py
ttr_nsai/ai/: __init__.py  base.py  factory.py  hybrid_agent.py  random_agent.py  symbolic_agent.py
ttr_nsai/data/: __init__.py  board.py
ttr_nsai/engine/: __init__.py  game.py  models.py  rules.py  scoring.py
ttr_nsai/experiments/: __init__.py  plot_metrics.py  run_experiments.py
ttr_nsai/symbolic/: __init__.py  reasoner.py
ttr_nsai/ui/: __init__.py  cli.py  pygame_ui.py  rendering.py
