[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsai-ticket-to-ride"
version = "0.1.0"
description = "Simplified neuro-symbolic Ticket to Ride implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pygame = [
    "pygame>=2.5",
]

[tool.setuptools.packages.find]
include = ["ttr_nsai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
